--- a/index.html
+++ b/index.html
@@ -11,10 +11,43 @@
 <body>
   
 <main>
+    <div class="passo ativo" id="passo-0">
     <p>
         Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!
     </p>
-</main>    
+
+<button class="btm-proximo" data-proximo="1">
+    Rio de Janeiro
+</button>
+
+<button class="btm-proximo" data-proximo="2">
+    Pernambuco
+</button>
+</div>
+
+
+<div class="passo" id="passo-1">
+<p>
+    Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.
+</p>
+
+<button class="btm-proximo" data-proximo="3">
+    Procurar a pista no topo do pico.
+</button>
+
+<button class="btm-proximo" data-proximo="4">
+    Desistir e voltar pra casa.
+</button>
+
+
+</div>
+
+
+
+
+
+  
+ 
 
 
 
@@ -24,7 +57,6 @@
 
 
 
-
-
+</main>  
 </body>
 </html>
