--- a/index.html
+++ b/index.html
@@ -38,15 +38,45 @@
 <button class="btm-proximo" data-proximo="4">
     Desistir e voltar pra casa.
 </button>
-
-
 </div>
 
 
 
 
 
-  
+<div class="passo" id="passo-2">
+<p>
+    Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?
+</p>
+
+<button class="btm-proximo" data-proximo="5">
+    Investigar igrejas antigas.
+</button>
+
+<button class="btm-proximo" data-proximo="6">
+    Explorar praias proximas.
+</button>
+</div>
+
+
+<div class="passo" id="passo-3">
+<p>
+    No topo do pico da tijuca, você encontra uma antiga inscrição apontando a próxima pista está localizada no Amazonas.
+</p>
+
+<button class="btm-proximo" data-proximo="7">
+    Seguir para o Amazonas.
+</button>
+</div>
+
+<div>
+    <P>
+        Você  decide que a aventura é grande demais e volta para casa,mas sempre se pergunta o que teria encontrado.
+    </P>
+</div>
+   <div>
+    
+   </div>
  
 
 
